test/corpus/control_flow.txt
================================================================================
If statement
================================================================================

if x > 10 {
    return 1;
}

--------------------------------------------------------------------------------

(source_file
  (if_statement
    condition: (comparison_expression
      left: (identifier)
      right: (integer_literal))
    consequence: (block
      (return_statement
        (integer_literal)))))

================================================================================
If-else statement
================================================================================

if x > 10 {
    return 1;
} else {
    return 0;
}

--------------------------------------------------------------------------------

(source_file
  (if_statement
    condition: (comparison_expression
      left: (identifier)
      right: (integer_literal))
    consequence: (block
      (return_statement
        (integer_literal)))
    alternative: (block
      (return_statement
        (integer_literal)))))

================================================================================
If-else-if chain
================================================================================

if x > 10 {
    return 1;
} else if x > 5 {
    return 2;
} else {
    return 0;
}

--------------------------------------------------------------------------------

(source_file
  (if_statement
    condition: (comparison_expression
      left: (identifier)
      right: (integer_literal))
    consequence: (block
      (return_statement
        (integer_literal)))
    alternative: (if_statement
      condition: (comparison_expression
        left: (identifier)
        right: (integer_literal))
      consequence: (block
        (return_statement
          (integer_literal)))
      alternative: (block
        (return_statement
          (integer_literal))))))

================================================================================
Match statement
================================================================================

match val {
    1 => return 1,
    2 | 3 => return 2,
    _ => return 0,
}

--------------------------------------------------------------------------------

(source_file
  (match_statement
    value: (identifier)
    (match_arm
      pattern: (literal_pattern
        (integer_literal))
      body: (return_statement
        (integer_literal)))
    (match_arm
      pattern: (or_pattern
        (literal_pattern
          (integer_literal))
        (literal_pattern
          (integer_literal)))
      body: (return_statement
        (integer_literal)))
    (match_arm
      pattern: (wildcard_pattern)
      body: (return_statement
        (integer_literal)))))

================================================================================
For loop with range
================================================================================

for i in 0..10 {
    print(i);
}

--------------------------------------------------------------------------------

(source_file
  (for_statement
    pattern: (identifier_pattern
      (identifier))
    iterator: (range_expression
      start: (integer_literal)
      end: (integer_literal))
    body: (block
      (expression_statement
        (call_expression
          function: (identifier)
          (argument
            value: (identifier)))))))

================================================================================
For loop with step
================================================================================

for i in 0..10 step 2 {
    print(i);
}

--------------------------------------------------------------------------------

(source_file
  (for_statement
    pattern: (identifier_pattern
      (identifier))
    iterator: (range_expression
      start: (integer_literal)
      end: (integer_literal))
    step: (integer_literal)
    body: (block
      (expression_statement
        (call_expression
          function: (identifier)
          (argument
            value: (identifier)))))))

================================================================================
While loop
================================================================================

while x < 10 {
    x = x + 1;
}

--------------------------------------------------------------------------------

(source_file
  (while_statement
    condition: (comparison_expression
      left: (identifier)
      right: (integer_literal))
    body: (block
      (expression_statement
        (assignment_expression
          left: (identifier)
          right: (binary_expression
            left: (identifier)
            right: (integer_literal)))))))

================================================================================
Labeled loop with break
================================================================================

outer: loop {
    if done {
        break outer;
    }
}

--------------------------------------------------------------------------------

(source_file
  (loop_statement
    label: (label)
    body: (block
      (if_statement
        condition: (identifier)
        consequence: (block
          (break_statement
            label: (label_identifier)))))))

================================================================================
Repeat statement
================================================================================

repeat 5 {
    print("Hello");
}

--------------------------------------------------------------------------------

(source_file
  (repeat_statement
    count: (integer_literal)
    body: (block
      (expression_statement
        (call_expression
          function: (identifier)
          (argument
            value: (string_literal
              (string_content))))))))

================================================================================
Guard statement
================================================================================

guard ptr != NULL else {
    return;
}

--------------------------------------------------------------------------------

(source_file
  (guard_statement
    condition: (equality_expression
      left: (identifier)
      right: (null_literal))
    body: (block
      (return_statement))))

================================================================================
Unless statement
================================================================================

unless is_valid {
    return;
}

--------------------------------------------------------------------------------

(source_file
  (unless_statement
    condition: (identifier)
    body: (block
      (return_statement))))

================================================================================
Defer statement
================================================================================

defer fclose(f);

--------------------------------------------------------------------------------

(source_file
  (defer_statement
    (call_expression
      function: (identifier)
      (argument
        value: (identifier)))))
